# Cortex

./: .gitignore  .gitmodules  CMakeLists.txt  Program.cs  README.md  Sandbox.cs  app.manifest  license
Badger/Badger.xcodeproj/: project.pbxproj
Badger/Badger.xcodeproj/project.xcworkspace/xcuserdata/sam.xcuserdatad/: UserInterfaceState.xcuserstate
Engine/: Interfaces.cs
cortex/: CMakeLists.txt
cortex/assets/Shaders/: basic.vert  basic.vert.spv
cortex/scripts/: spirv_compile.sh
cortex/src/: Cortex.hpp
cortex/src/Cortex/Core/: Application.cpp  Application.hpp  Entrypoint.hpp  Window.cpp  Window.hpp
cortex/src/Cortex/Events/: Event.hpp  KeyEvent.hpp  SystemEvent.hpp
cortex/src/Cortex/Graphics/: RenderBackend.cpp  RenderBackend.hpp  RenderContext.cpp  RenderContext.hpp  RenderDevice.cpp  RenderDevice.hpp  Renderer.cpp  Renderer.hpp  RendererBackend.cpp  RendererBackend.hpp  RendererContext.cpp  RendererContext.hpp  Swapchain.cpp  Swapchain.hpp  Window.cpp  Window.hpp
cortex/src/Cortex/Utils/: Asserts.cpp  Asserts.h  Defines.h  Logging.cpp  Logging.hpp
engine/: CMakeLists.txt
engine/assets/Shaders/: basic.frag  basic.vert  basic.vert.spv
engine/source/: Badger.hpp  Cortex.hpp
engine/source/Badger/Base/: Asserts.hpp  Base.hpp  Defines.hpp  Logging.cpp  Logging.hpp
engine/source/Badger/Core/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  Entrypoint.cpp  Entrypoint.hpp  Events.cpp  Events.hpp  Scene.cpp  Scene.hpp  Window.cpp  Window.hpp
engine/source/Badger/Entities/: Entity.cpp  Entity.hpp  MeshInstance.cpp  MeshInstance.hpp  Transform.cpp  Transform.hpp
engine/source/Badger/Graphics/: Camera.cpp  Camera.hpp  GraphicsContext.cpp  GraphicsContext.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp  Material.cpp  Material.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp  VulkanBuffers.cpp  VulkanBuffers.hpp  VulkanHelpers.cpp  VulkanHelpers.hpp  VulkanImages.cpp  VulkanImages.hpp  VulkanTypes.cpp  VulkanTypes.hpp
engine/source/Cortex/Base/: Asserts.hpp  Base.hpp  Defines.hpp  Logging.cpp  Logging.hpp
engine/source/Cortex/Core/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  Entrypoint.cpp  Entrypoint.hpp  Events.cpp  Events.hpp  Scene.cpp  Scene.hpp  Window.cpp  Window.hpp
engine/source/Cortex/Entities/: Entity.cpp  Entity.hpp  MeshInstance.cpp  MeshInstance.hpp  Transform.cpp  Transform.hpp
engine/source/Cortex/Graphics/: GraphicsContext.cpp  GraphicsContext.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp  Material.cpp  Material.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp  VulkanBuffers.cpp  VulkanBuffers.hpp  VulkanHelpers.cpp  VulkanHelpers.hpp  VulkanImages.cpp  VulkanImages.hpp  VulkanTypes.cpp  VulkanTypes.hpp
engine/src/: Cortex.hpp
engine/src/Cortex/Core/: Application.cpp  Application.hpp  Window.cpp  Window.hpp
engine/src/Cortex/Events/: MouseEvent.hpp
engine/src/Cortex/Graphics/: Renderer.cpp  RendererBackend.hpp  RendererContext.cpp  RendererContext.hpp  RendererDevice.cpp  RendererDevice.hpp  RendererInstance.cpp  RendererInstance.hpp  RendererSwapchain.cpp  RendererSwapchain.hpp
engine/src/Cortex/Rendering/: Buffer.cpp  Buffer.hpp  Pipeline.cpp  Pipeline.hpp  RenderContext.cpp  RenderContext.hpp  RenderDevice.cpp  RenderDevice.hpp  RenderInstance.cpp  RenderInstance.hpp  Renderer.hpp  Shader.cpp  Shader.hpp  StaticMesh.cpp  StaticMesh.hpp  Swapchain.cpp  Swapchain.hpp  Vertex.cpp  Vertex.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderer.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanUtils.h
engine/src/Cortex/Utils/: Asserts.h  Defines.h  Logging.cpp
testbed/: CMakeLists.txt
testbed/assets/models/kama/: material.mtl
testbed/assets/models/vase/: balustervase_combined.mtl  readme.txt
testbed/assets/shaders/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  basic2d.frag  basic2d.vert  basic2d.vert.spv  compile.sh  test.frag  test.vert
testbed/source/: other.cpp  other.hpp  testbed.cpp
testbed/src/: Testbed.cpp
